<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/login_image"
        android:layout_height="@dimen/login_image"
        android:src="@drawable/ic_school"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_margin="@dimen/login_margin"
        android:layout_below="@id/ivImage"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/login_padding"


        />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:layout_margin="@dimen/login_margin"
        android:layout_below="@id/etUser"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/login_padding"


        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/fic_color"
        android:layout_width="0dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:text="@string/user_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        />

</RelativeLayout>