<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="@dimen/login_image"
        android:layout_height="@dimen/login_image"
        android:src="@drawable/ic_school"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_margin="@dimen/login_margin"
        android:layout_below="@id/ivImage"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="@dimen/login_padding"
        app:layout_constraintTop_toBottomOf="@id/ivImage"
        />

    <EditText
        android:id="@+id/etPassword"
        android:inputType="numberPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_password"
        android:layout_margin="@dimen/login_margin"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/login_padding"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_margin="@dimen/login_margin"
        android:backgroundTint="@color/fic_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_button"
        app:layout_constraintBottom_toBottomOf="parent"
        />





</androidx.constraintlayout.widget.ConstraintLayout>